<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jot\'emDown</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_passpoints_reset">Reset passpoints</string>
    <string name="menu_replace_lock_image">Replace lock image</string>
    <string name="menu_reset_password">Change password</string>
    <string name="menu_new_group">Add</string>
    <string name="menu_new">New</string>
    <string name="menu_delete_group">Delete</string>
    <string name="menu_edit_group">Change</string>
    <string name="menu_map">Map</string>
    <string name="menu_privacy">Privacy...</string>
    <string name="menu_data">Data...</string>
    <string name="menu_import">Import</string>
    <string name="menu_export">Export</string>
    <string name="menu_lock">Lock</string>
    <string name="menu_save">Save</string>
    <string name="menu_send">Share note</string>
    <string name="menu_priority">Toggle priority</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_send_done">Done</string>
    <string name="menu_reminder">Reminder</string>
    <string name="menu_geotag">Geotag</string>
    <string name="menu_groups">Folders</string>
    <string name="menu_call_phone">Call phone</string>
    <string name="menu_send_email">Send email</string>
    <string name="menu_goto_webpage">Web page</string>
    <string name="menu_backup_done">Done</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>

    <string name="menu_enable_privacy">Enable privacy</string>
    <string name="menu_disable_privacy">Disable privacy</string>
    <string name="menu_sort_body">By text</string>
    <string name="menu_sort_create_date">By create date</string>
    <string name="menu_next_help_page">Next</string>
    <string name="menu_prev_help_page">Prev</string>
    <string name="menu_sort_edit_date">By edit date</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_delete">Delete note</string>
    <string name="menu_drive">Drive</string>
    <string name="menu_image">Image</string>
    <string name="menu_remove_image">Delete Image</string>
    <string name="menu_schedule_backups">Schedule backup</string>
    <string name="chk_google_drive">Google Drive</string>
    <string name="title_activity_main">Jot\'emDown</string>
    <string name="title_activity_image">Jot\'emDown</string>
    <string name="title_noteimage_activity">Note Image</string>
    <string name="toast_cant_save">Unable to save note. Check for sufficient space.</string>
    <string name="passpoints_image">Passpoints Image</string>
    <string name="title_activity_image_activity2">ImageActivity2</string>
    <string name="storing_data">Saving passpoints...</string>
    <string name="save">Save</string>
    <string name="new_note">New</string>
    <string name="save_note">Save</string>
    <string name="send_note">Send</string>
    <string name="lock">Lock</string>
    <string name="database_notes">notes.db</string>
    <string name="dialog_positive">Yes</string>
    <string name="dialog_negative">Cancel</string>
    <string name="dialog_restore_notes">Restore will delete existing notes.\nContinue?</string>
    <string name="dialog_import_notes">Import will add to the existing notes.\nContinue?</string>
    <string name="dialog_delete_note">The note will be permanently deleted.\nContinue? </string>
    <string name="dialog_delete_image">The image will be permanently deleted.\nContinue? </string>
    <string name="dialog_delete_item">The item will be permanently deleted.\nContinue? </string>
    <string name="dialog_location_settings">Location services need to be enabled?\nContinue? </string>
    <string name="time_pick">Pick reminder time</string>
    <string name="time_save">Set Reminder</string>
    <string name="time_selected"></string>
    <string name="time_current">The Time is:</string>
    <string name="note_edited">Note edited</string>
    <string name="PHOTO_NOT_SAVED">Unable to save photo file.</string>
    <string name="PASSPOINTS_PHOTO">passpoints_image</string>
    <string name="lbl_enter_new_password">New password</string>
    <string name="lbl_password_change_title">Change password</string>
    <string name="lbl_current_password">Password</string>
    <string name="lbl_reenter_new_password">Repeat password</string>
    <string name="lbl_send_address">Email or phone #</string>
    <string name="lbl_backup_address">Email</string>
    <string name="lbl_export_address">Email</string>
    <string name="lbl_send_note_title">Send</string>
    <string name="lbl_backup_file">Filename</string>
    <string name="lbl_export_file">Filename</string>
    <string name="lbl_backup_title">Backup</string>
    <string name="lbl_select_file">Select file...</string>
    <string name="lbl_export_title">Export</string>
    <string name="lbl_restore_title">Restore</string>
    <string name="lbl_restore_file">Filename</string>
    <string name="lbl_google_password">Google Password</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_send">Send</string>
    <string name="btn_next">Next</string>
    <string name="btn_backup">Backup</string>
    <string name="btn_restore">Restore</string>
    <string name="btn_import">Import</string>
    <string name="btn_reminder">Set Reminder</string>
    <string name="btn_backup_and_send">Backup+Send</string>
    <string name="default_password">password</string>
    <string name="password_hint">Password</string>
    <string name="reminder_date_hint">MM/DD/YY</string>
    <string name="reminder_time_hint">HH-MM</string>
    <string name="reminder_phone_hint">Enter # for text message</string>
    <string name="lbl_reminder_date">Date</string>
    <string name="lbl_reminder_time">Time</string>
    <string name="lbl_reminder_update">Update</string>
    <string name="lbl_reminder_add">Add</string>
    <string name="lbl_reminder_cancel">Delete</string>
    <string name="lbl_backup_cancel">Cancel</string>
    <string name="reminder_recurrence">Recurrence</string>
    <string name="lbl_backup_location">Location</string>
    <string name="lbl_backup_time">Time of day</string>
    <string name="lbl_backup_freq">Frequency (hrs)</string>
    <string name="backup_freq_hint">Hours...</string>
    <string name="backup_time_hint">HH:MM...</string>
    <string name="lbl_backup_submit">Submit</string>
    <string name="lbl_backup_loc_hint">Email or Google acccount</string>
    <string name="password_hint_new">New password...</string>
    <string name="password_hint_repeat">Repeat password...</string>
    <string name="replace_lock_image">Replace lock image...</string>
    <string name="replace_image_dialog">Take a photo or browse gallery for replacement image.</string>
    <string name="lbl_reminder_title">Reminder</string>
    <string name="lbl_reminder_phone">Phone</string>
    <string name="lbl_import_title">Import</string>
    <string name="webview_activity_title">View Web Page</string>
    <string name="btn_time_picker">Clock</string>
    <string name="notification_title">Jot\'emDown Notification</string>
    <string name="btn_contact_picker">Contacts</string>
    <string name="btn_export">Export</string>
    <string name="btn_calendar">Calendar</string>
    <string name="recur_daily">Resend daily</string>
    <string name="vibrate">Vibrate/Sound</string>
    <string name="map_activity_title">Note Map</string>
    <string name="edit_note_activity_title">Edit</string>
    <string name="main_activity_title">Jot\'emDown</string>
    <string name="txt_help_search">HELP:</string>
    <string name="help_title">Help</string>
    <string name="title_groups">Folders</string>
    <string name="action_settings">Settings</string>

</resources>