<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_new_note"
    tools:context="com.DataFinancial.NoteJackal.NewNote" >

    <item
        android:id="@+id/menu_save"
        android:orderInCategory="89"
        android:title="@string/menu_save"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_delete"
        android:orderInCategory="90"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_send_note"
        android:orderInCategory="89"
        android:title="@string/menu_send"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_reminder"
        android:orderInCategory="92"
        android:title="@string/menu_reminder"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_priority"
        android:orderInCategory="94"
        android:title="@string/menu_priority"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_geotag"
        android:orderInCategory="95"
        android:title="@string/menu_geotag"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_map"
        android:orderInCategory="96"
        android:title="@string/menu_map"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_call_phone"
        android:orderInCategory="97"
        android:title="@string/menu_call_phone"
        app:showAsAction="never"/>
        <item
        android:id="@+id/menu_send_email"
        android:orderInCategory="98"
        android:title="@string/menu_send_email"
        app:showAsAction="never"/>
                <item
        android:id="@+id/menu_goto_webpage"
        android:orderInCategory="99"
        android:title="@string/menu_goto_webpage"
        app:showAsAction="never"/>

</menu>