<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:background="@color/black"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lbl_enter_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/top_margin_xlarge"
        android:text="@string/lbl_enter_new_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/grey" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/password_hint_new"
        android:inputType="textVisiblePassword"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lbl_reenter_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/top_margin_medium"
        android:text="@string/lbl_reenter_new_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/grey" />

    <EditText
        android:id="@+id/txtPasswordRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/password_hint_repeat"
        android:inputType="textVisiblePassword"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp" >
    </EditText>

    <Button
        android:id="@+id/btnSubmit"
        style="@style/fancy_button"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/top_margin_xxlarge"
        android:text="@string/btn_submit" />

</LinearLayout>