<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".ReminderActivity" >

    <TextView
        android:id="@+id/lbl_backup_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/top_margin_medium"
        android:text="@string/lbl_backup_location"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/grey" >
    </TextView>
    <LinearLayout
        android:id="@+id/ll_backup_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/txt_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:inputType="textEmailAddress"
            android:minEms="10"
            android:hint="@string/lbl_backup_loc_hint"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:editable="false"
            android:focusable="false">

            <requestFocus />
        </EditText>
        <ImageButton
            android:id="@+id/btn_backup_email"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="0dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/sym_action_email" />
        <ImageButton
            android:id="@+id/btn_backup_drive"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="5dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/google_drive" />

    </LinearLayout>
    <TextView
        android:id="@+id/lbl_backup_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/top_margin_medium"
        android:text="@string/lbl_backup_time"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/grey" >
    </TextView>

    <LinearLayout
        android:id="@+id/ll_reminder_backup_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left">

        <EditText
            android:id="@+id/txt_backup_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minEms="6"
            android:background="@drawable/rounded_corner"
            android:digits="0123456789:"
            android:inputType="textEmailAddress" >
            <requestFocus />
        </EditText>

        <ImageButton
            android:id="@+id/btn_backup_time"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/clock" />
    </LinearLayout>

    <TextView
        android:id="@+id/lbl_backup_freq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/top_margin_medium"
        android:text="@string/lbl_backup_freq"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/grey" >
    </TextView>

    <EditText
        android:id="@+id/txt_backup_freq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:minEms="6"
        android:hint="@string/backup_freq_hint"
        android:layout_gravity="left"
        android:digits="0123456789"
        android:inputType="number|textPassword" >
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_xlarge" >

        <Button
            android:id="@+id/btn_backup_schedule"
            style="@style/fancy_button"
            android:layout_width="0dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/lbl_backup_submit" />

        <Button
            android:id="@+id/btn_backup_cancel"
            style="@style/fancy_button"
            android:layout_width="0dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/lbl_backup_cancel" />
    </LinearLayout>

</LinearLayout>