<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/top_margin_xxlarge"
        android:text="@string/lbl_restore_file"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/grey" />

    <EditText
        android:id="@+id/txtRestoreFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_corner"
        android:inputType="textNoSuggestions"
        android:paddingBottom="5dp"
        android:paddingLeft="@dimen/top_margin_large"
        android:paddingTop="5dp" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/chkGoogleDrive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:layout_marginLeft="@dimen/top_margin_large"
        android:layout_marginTop="@dimen/top_margin_small"
        android:button="@drawable/selector_recur_check"
        android:checked="false"
        android:text="@string/chk_google_drive"
        android:textColor="@color/grey" />

    <Button
        android:id="@+id/btnRestore"
        style="@style/fancy_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/top_margin_xxlarge"
        android:text="@string/btn_restore" />

</LinearLayout>